# healthomics_helper_tools

./: 1_create_docker_manifest_and_omics_config.sh  2_stepfunction.sh  3_move_omics_config_update_nextflow_config.sh  4_parameter_extractor_command_line.py  5_deploy_pipeline_to_aws.sh  6_pull_test_data.py  7_execute_pipeline.sh  README.md  file_uploader.py  inspect_nf.py  public_registry_properties.json  pyproject.toml  timeline.py
ecr_tools/: delete_empty_ECR_repositories.sh  find_containers_stepfunction_missed.py  list_empty_ECR_repostories.sh  manually_push_wave_containers.sh  readme.md  sync_containers_to_ecr.py
nf/: __init__.py
