[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "healthomics-helper-tools"
version = "0.1.0"
description = "Helper tools for deploying and managing nf-core pipelines on AWS HealthOmics"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.34",
    "botocore>=1.34",
    "requests>=2.31",
    "pandas>=2.0",
    "bokeh>=3.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["nf", "ecr_tools"]

[tool.ruff]
line-length = 100
target-version = "py310"
